Fix: gdpr z-index fix

--- a/smartweb/src/scss/common/com-cookies.scss
+++ b/smartweb/src/scss/common/com-cookies.scss
@@ -1,5 +1,5 @@
 #gdpr-consent-banner {
-  z-index: 98;
+  z-index: 9;
   padding: 50px 25px;
   background: #fff;
   position: fixed;
